--- a/PhotoGenome/src/main/webapp/jsp/PG-Style.css
+++ b/PhotoGenome/src/main/webapp/jsp/PG-Style.css
@@ -17,6 +17,41 @@
     padding:0px;
     margin:2px;
   }
+  .P_box{
+   border:1px solid darkGrey;
+    position:relative;
+    float:left;
+    width:205px;
+    height:205px;
+    left:5px;
+    top:5px;
+    padding:0px;
+    margin:2px;
+  }
+  .Photo{
+   border:1px solid darkGrey;
+    position:relative;
+    float:left;
+    width:200px;
+    height:200px;
+    left:0px;
+    padding:0px;
+    margin:2px;
+  }
+  .Pclose_box{
+      background-image:url('Close.png');
+     background-size: contain;
+    height:10px;
+    width:10px;
+     color:#fff;
+    padding:2px;
+    display:inline;
+    position:absolute;
+    right:15px;
+    cursor:pointer;
+    z-index:100;
+  }
+   
   .PCclose_box{
       background-image:url('Close.png');
      background-size: contain;
